.metadata/.plugins/org.eclipse.cdt.ui/ARM_100Hz_on_GPIO_Pin.build.log
17:11:39 **** Build of configuration Debug for project ARM_100Hz_on_GPIO_Pin ****
make all 
Building file: ../src/CLCD_program.c
Invoking: Cross ARM GNU C Compiler
arm-none-eabi-gcc -mcpu=cortex-m3 -mthumb -Og -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -ffreestanding -fno-move-loop-invariants -Wall -Wextra  -g3 -DDEBUG -DUSE_FULL_ASSERT -DTRACE -DOS_USE_TRACE_SEMIHOSTING_DEBUG -DSTM32F10X_MD -DUSE_STDPERIPH_DRIVER -DHSE_VALUE=8000000 -I"../include" -I"../system/include" -I"../system/include/cmsis" -I"../system/include/stm32f1-stdperiph" -std=gnu11 -MMD -MP -MF"src/CLCD_program.d" -MT"src/CLCD_program.o" -c -o "src/CLCD_program.o" "../src/CLCD_program.c"
In file included from ../src/CLCD_program.c:15:0:
../src/../../test_LCD/include/Delay_interface.h:1:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'void'
 void delay_ms(u32 value);
 ^~~~
../src/CLCD_program.c: In function 'CLCD_voidInitialize':
../src/CLCD_program.c:20:2: warning: implicit declaration of function 'delay_ms' [-Wimplicit-function-declaration]
  delay_ms(40);
  ^~~~~~~~
At top level:
../src/CLCD_program.c:100:13: warning: 'CLCD_voidSetHalfDataPort' defined but not used [-Wunused-function]
 static void CLCD_voidSetHalfDataPort(u8 Copy_u8Data)
             ^~~~~~~~~~~~~~~~~~~~~~~~
make: *** [src/subdir.mk:32: src/CLCD_program.o] Error 1

17:11:40 Build Finished (took 333ms)

